stage1/Qube/MemoryManager/x64/Release/MemoryManager.log
  x86_64-elf-gcc.exe -c *.c -fpic -fvisibility=hidden -g -o memory_manager.o
  In file included from ../Common/Qube.h:100:0,
                   from memory_manager.h:3,
                   from memory_manager.c:1:
  ../Common/intrinsics.h: In function 'spin_lock':
  ../Common/intrinsics.h:23:44: warning: passing argument 1 of '__qube_sync_bool_compare_and_swap' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
    while (!__qube_sync_bool_compare_and_swap(p, 0, 1))
                                              ^
  ../Common/intrinsics.h:10:20: note: expected 'void *' but argument is of type 'SpinLock {aka volatile int *}'
   static inline BOOL __qube_sync_bool_compare_and_swap(void *p, int old_val, int new_val) __attribute__((always_inline));
                      ^
  ../Common/intrinsics.h: In function '__qube_mm_pause':
  ../Common/intrinsics.h:39:2: warning: implicit declaration of function '_mm_pause' [-Wimplicit-function-declaration]
    _mm_pause();
    ^
  ../Common/intrinsics.h: At top level:
  ../Common/intrinsics.h:42:20: error: conflicting types for '__qube_sync_bool_compare_and_swap'
   static inline BOOL __qube_sync_bool_compare_and_swap(SpinLock p, int old_val, int new_val) {
                      ^
  ../Common/intrinsics.h:10:20: note: previous declaration of '__qube_sync_bool_compare_and_swap' was here
   static inline BOOL __qube_sync_bool_compare_and_swap(void *p, int old_val, int new_val) __attribute__((always_inline));
                      ^
  ../Common/intrinsics.h:31:2: warning: '__qube_memory_barrier' is static but used in inline function 'spin_unlock' which is not static
    __qube_memory_barrier();
    ^
  ../Common/intrinsics.h:25:14: warning: '__qube_mm_pause' is static but used in inline function 'spin_lock' which is not static
     while (*p) __qube_mm_pause();
                ^
  ../Common/intrinsics.h:23:10: warning: '__qube_sync_bool_compare_and_swap' is static but used in inline function 'spin_lock' which is not static
    while (!__qube_sync_bool_compare_and_swap(p, 0, 1))
            ^
  ../Common/intrinsics.h:10:20: warning: '__qube_sync_bool_compare_and_swap' used but never defined
   static inline BOOL __qube_sync_bool_compare_and_swap(void *p, int old_val, int new_val) __attribute__((always_inline));
                      ^
  Makefile:6: recipe for target 'memory_manager' failed
  make: *** [memory_manager] Error 1
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(37,5): error MSB3073: The command "make all" exited with code 2.
